HEAD
	+ Add breadcrumbs
1.3.11
	+ Fixed bug when retrieving LDAP instance in master/slave architecture
	+ Added log consolidation and report
1.3.10
	+ ESMTP service in port 465 fixed
	+ Deliver to local user fixed
	+ Using LDA protocol and LDAP for dovecot's userdb
	+ Added user mailbox quota
	+ Added autocreation of trash and spam folders
	+ Added flush of spam and trash folders
	+ Added sieve and managesieve support
1.3.7
	+ more resilent EBox::MailVdomain::setUserAccount, now we don't
	abort if it exists already a user maildir, instead we move it to a
	backup directory
1.3.6
	+ now you can specify a port for the smarthost (if not specified
	the default port continues to be 25)
	+ bugfix: fixed regresion in logs and added greylist event for
	connections to remote SMTPs
1.3.4
	+ tableInfo returns an array of hash refs
1.1.41
	+ bugfix: Allow unsafe characters in smtp auth password
1.1.30
	+ SMTP and POP/iMAP certificates can be changed via  the CA module
1.1.20
	+ UI improvement: hide and show mail filter fields depending on the
	configuration
1.1.10
	+ New release
1.1
	+ Replaced courier with dovecot
	+ Added aliases for whole domains
	+ Use the new row() and ids() API
	+ Bugfix: alias are deleted when user account is deleted
	+ Bugfix: when already exists the maildir, create a new account is
	not allowed
	+ Bugfix: fixed error in mail queue template: avoid to reference a
	possible undefined value
	+ Bugfix: running method in Greylist does not fail if there is not
	eventd fil
	+ Bugfix: force removal of previous data in backup
	+Bugfix: removed bad superfluous call that was the source of
	, at least, restore errors
	+ Mail queue parsing error fixed and more robust mail queue template
0.12.101
	+ Bugfix: Postgrey daemon is disabled by default
0.12.100
	+ EBox::MailUserLdap::userAccount and
	EBox::MailUserLdap::getUserLdapValue  don't longer assume that the
	user exists
	+ Bugfix: MDSize attribute should not be restored in systems with
	MDSize feature disabled