@@ -1,4 +1,5 @@
 HEAD
+	+ Add migration to rename mail table to mail_message
 	+ Add breadcrumbs
 1.3.11
 	+ Fixed bug when retrieving LDAP instance in master/slave architecture
